jwt os working now
