# spec/openapi.yml
@@ -4,65 +4,65 @@ info:
   description: The rack that holds all the merch
   license:
     name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
+    url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
   version: 0.1.0
 
 servers:
-- url: http://localhost:8080
-  description: Generated server url
+  - url: 'http://localhost:8080'
+    description: Generated server url
 
 paths:
-  "/merch":
+  /api/v1/merch:
     get:
       tags:
-      - merch
+        - merch
       summary: Get a list of merch
       operationId: getMerchList
       parameters:
-      - name: page
-        in: query
-        description: Zero-based page index (0..N)
-        required: false
-        schema:
-          minimum: 0
-          type: integer
-          default: 0
-      - name: size
-        in: query
-        description: The size of the page to be returned
-        required: false
-        schema:
-          minimum: 1
-          type: integer
-          default: 25
-      - name: sort
-        in: query
-        description: 'Sorting criteria in the format: property,(asc|desc). Default
-          sort order is ascending. Multiple sort criteria are supported.'
-        required: false
-        schema:
-          type: array
-          items:
-            type: string
+        - name: page
+          in: query
+          description: Zero-based page index (0..N)
+          required: false
+          schema:
+            minimum: 0
+            type: integer
+            default: 0
+        - name: size
+          in: query
+          description: The size of the page to be returned
+          required: false
+          schema:
+            minimum: 1
+            type: integer
+            default: 25
+        - name: sort
+          in: query
+          description: >-
+            Sorting criteria in the format: property,(asc|desc). Default sort
+            order is ascending. Multiple sort criteria are supported.
+          required: false
+          schema:
+            type: array
+            items:
+              type: string
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                "$ref": "#/components/schemas/MerchPage"
+                $ref: '#/components/schemas/MerchPage'
+      security: []
     post:
       tags:
-      - merch
+        - merch
       summary: Save a new piece of merch
       operationId: saveNewMerch
-      security:
-      - bearerAuth: []
       requestBody:
         content:
           application/json:
             schema:
-              "$ref": "#/components/schemas/MerchModel"
+              $ref: '#/components/schemas/MerchModel'
         required: true
       responses:
         '201':
@@ -71,151 +71,40 @@ paths:
             Location:
               description: URI to the saved merch
               style: simple
-              schema: 
+              schema:
                 type: string
                 format: uri
         '400':
-          "$ref": "#/components/responses/BadRequest"
-        '401':
-          "$ref": "#/components/responses/Unauthorized"
-        '403':
-          "$ref": "#/components/responses/Unauthorized"
-  "/merch/{merchId}":
-    get:
-      tags:
-      - merch
-      summary: Get a piece of merch by id
-      operationId: getMerchItem
-      parameters:
-      - name: merchId
-        in: path
-        description: id of the merch
-        required: true
-        schema:
-          type: string
-          format: uuid
-      responses:
-        '200':
-          description: OK
+          description: Bad request
           content:
-            application/json:
+            application/json+problem:
               schema:
-                "$ref": "#/components/schemas/MerchModel"
-        '404':
-          "$ref": "#/components/responses/NotFound"
-    put:
-      tags:
-        - merch
-      summary: Update a piece of merch fully
-      operationId: updateMerchItem
-      security:
-      - bearerAuth: []
-      parameters:
-      - name: merchId
-        in: path
-        description: id of the merch
-        required: true
-        schema:
-          type: string
-          format: uuid
-      requestBody:
-        content:
-          application/json:
-            schema:
-              "$ref": "#/components/schemas/MerchModel"
-      responses:
-        '200':
-          description: OK
+                $ref: '#/components/schemas/ProblemDetail'
+        '401':
+          description: Unauthorized
           content:
-            application/json:
+            application/json+problem:
               schema:
-                "$ref": "#/components/schemas/MerchModel"
-        '400':
-          "$ref": "#/components/responses/BadRequest"
-        '401':
-          "$ref": "#/components/responses/Unauthorized"
+                $ref: '#/components/schemas/ProblemDetail'
         '403':
-          "$ref": "#/components/responses/Unauthorized"
-        '404':
-          "$ref": "#/components/responses/NotFound"
-    patch:
-      tags:
-        - merch
-      summary: Update a piece of merch with the delta
-      operationId: patchMerchItem
-      security:
-      - bearerAuth: []
-      parameters:
-      - name: merchId
-        in: path
-        description: id of the merch
-        required: true
-        schema:
-          type: string
-          format: uuid
-      requestBody:
-        content:
-          application/json:
-            schema:
-              "$ref": "#/components/schemas/MerchModelDelta"
-      responses:
-        '200':
-          description: OK
+          description: Unauthorized
           content:
-            application/json:
+            application/json+problem:
               schema:
-                "$ref": "#/components/schemas/MerchModel"
-        '400':
-          "$ref": "#/components/responses/BadRequest"
-        '401':
-          "$ref": "#/components/responses/Unauthorized"
-        '403':
-          "$ref": "#/components/responses/Unauthorized"
-        '404':
-          "$ref": "#/components/responses/NotFound"
-    delete:
-      tags:
-        - merch
-      summary: Delete a piece pf merch not bought
-      operationId: deleteMerchItem
+                $ref: '#/components/schemas/ProblemDetail'
+      parameters: []
       security:
-      - bearerAuth: []
-      parameters:
-      - name: merchId
-        in: path
-        description: id of the merch
-        required: true
-        schema:
-          type: string
-          format: uuid
-      responses:
-        '204':
-          description: Deleted
-        '400':
-          "$ref": "#/components/responses/BadRequest"
-        '401':
-          "$ref": "#/components/responses/Unauthorized"
-        '403':
-          "$ref": "#/components/responses/Unauthorized"
-        '404':
-          "$ref": "#/components/responses/NotFound"
-
-  "/merch/{merchId}/status":
+        - bearerAuth: []
+  '/api/v1/merch/{merchId}/status':
     post:
       tags:
-      - merch
+        - merch
       summary: Update the status of a piece of merch
       operationId: updateMerchStatus
       security:
-      - bearerAuth: []
+        - bearerAuth: []
       parameters:
-      - name: merchId
-        in: path
-        description: id of the merch
-        required: true
-        schema:
-          type: string
-          format: uuid
+        - $ref: '#/components/parameters/merchId'
       requestBody:
         content:
           application/json:
@@ -226,52 +115,226 @@ paths:
               properties:
                 status:
                   type: string
-                  enum: [LOADED, OPEN, SOLD_OUT]
+                  enum:
+                    - LOADED
+                    - OPEN
+                    - SOLD_OUT
                   description: Status that the merch must be updated to
       responses:
         '200':
           description: OK
         '400':
-          "$ref": "#/components/responses/BadRequest"
+          description: Bad request
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
         '401':
-          "$ref": "#/components/responses/Unauthorized"
+          description: Unauthorized
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
         '403':
-          "$ref": "#/components/responses/Unauthorized"
+          description: Unauthorized
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
         '404':
-          "$ref": "#/components/responses/NotFound"
-
+          description: Resource was not found
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+  '/api/v1/merch/{merchId}':
+    get:
+      tags:
+        - merch
+      summary: Get a piece of merch by id
+      operationId: getMerchItem
+      parameters:
+        - $ref: '#/components/parameters/merchId'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MerchModel'
+        '404':
+          description: Resource was not found
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+      security: []
+    put:
+      tags:
+        - merch
+      summary: Update a piece of merch fully
+      operationId: updateMerchItem
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: '#/components/parameters/merchId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MerchModel'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MerchModel'
+        '400':
+          description: Bad request
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+        '401':
+          description: Unauthorized
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+        '403':
+          description: Unauthorized
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+        '404':
+          description: Resource was not found
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+    patch:
+      tags:
+        - merch
+      summary: Update a piece of merch with the delta
+      operationId: patchMerchItem
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: '#/components/parameters/merchId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MerchModelDelta'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MerchModel'
+        '400':
+          description: Bad request
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+        '401':
+          description: Unauthorized
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+        '403':
+          description: Unauthorized
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+        '404':
+          description: Resource was not found
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+    delete:
+      tags:
+        - merch
+      summary: Delete a piece pf merch not bought
+      operationId: deleteMerchItem
+      security:
+        - bearerAuth: []
+      parameters:
+        - $ref: '#/components/parameters/merchId'
+      responses:
+        '204':
+          description: Deleted
+        '400':
+          description: Bad request
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+        '401':
+          description: Unauthorized
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+        '403':
+          description: Unauthorized
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+        '404':
+          description: Resource was not found
+          content:
+            application/json+problem:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
 components:
   securitySchemes:
-    bearerAuth:            # arbitrary name for the security scheme
+    bearerAuth:
       type: http
       scheme: bearer
       bearerFormat: JWT
-
+  parameters:
+    merchId:
+      name: merchId
+      in: path
+      description: id of the merch
+      required: true
+      schema:
+        type: string
+        format: uuid
   responses:
     Unauthorized:
       description: Unauthorized
       content:
         application/json+problem:
           schema:
-            "$ref": "#/components/schemas/ProblemDetail"
+            $ref: '#/components/schemas/ProblemDetail'
     Forbidden:
       description: Forbidden
       content:
         application/json+problem:
           schema:
-            "$ref": "#/components/schemas/ProblemDetail"
+            $ref: '#/components/schemas/ProblemDetail'
     BadRequest:
       description: Bad request
       content:
         application/json+problem:
           schema:
-            "$ref": "#/components/schemas/ProblemDetail"
+            $ref: '#/components/schemas/ProblemDetail'
     NotFound:
       description: Resource was not found
       content:
         application/json+problem:
           schema:
-            "$ref": "#/components/schemas/ProblemDetail"
+            $ref: '#/components/schemas/ProblemDetail'
 
   schemas:
     MerchModelDelta:
@@ -282,7 +345,10 @@ components:
           format: int64
         status:
           type: string
-          enum: [LOADED, OPEN, SOLD_OUT]
+          enum:
+            - LOADED
+            - OPEN
+            - SOLD_OUT
           description: Status the merch is in
         title:
           type: string
@@ -326,7 +392,7 @@ components:
         merch:
           type: array
           items:
-            "$ref": "#/components/schemas/MerchModel"
+            $ref: '#/components/schemas/MerchModel'
         page:
           type: integer
           format: int32
@@ -336,3 +402,12 @@ components:
         totalPages:
           type: integer
           format: int32
+
+security:
+  - bearerAuth: []
+
+tags:
+  - name: merch
+    description: Services used to get and manipulate merch
+  - name: space
+    description: Service used to get and manipulate spaces
